--- a/_posts/bible-studies-Viet/John/2023-07-02-John-06-v01-71-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-06-v01-71-Viet.md
@@ -25,10 +25,16 @@ comments_locked: false
 <div>
 <p>
 <img alt src="http://vacsf.org/assets/images/John-teaser-Viet.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-    <span style="color: rgb(159, 29, 33);"><i> <sup>1</sup> Rồi đó, Ðức Chúa Jêsus qua bờ bên kia biển Ga-li-lê, là biển Ti-bê-ri-át.  <sup>2</sup> Một đoàn dân đông theo Ngài, vì từng thấy các phép lạ Ngài làm cho những kẻ bịnh.  <sup>3</sup> Nhưng Ðức Chúa Jêsus lên trên núi, ngồi đó với môn đồ.  <sup>4</sup> Vả, lễ Vượt Qua, là lễ của đến Giu-đa gần tới.  <sup>5</sup> Ðức Chúa Jêsus ngước mắt lên, thấy một đoàn dân đông đến cùng mình, bèn phán với Phi-líp rằng: Chúng ta sẽ mua bánh ở đâu, để cho dân nầy có mà ăn?  <sup>6</sup> Ngài phán điều đó đặng thử Phi-líp, chớ Ngài đã biết điều Ngài sẽ làm rồi.  <sup>7</sup> Phi-líp thưa rằng: Hai trăm đơ-ni-ê bánh không đủ phát cho mỗi người một ít.  <sup>8</sup> Một môn đồ, là Anh-rê, em của Si-môn Phi -e-rơ, thưa rằng:  <sup>9</sup> Ðây có <strong>một đứa con trai, có năm cái bánh mạch nha và hai con cá</strong>; nhưng đông người dường nầy, thì ngằn ấy có thấm vào đâu?  <sup>10</sup> Ðức Chúa Jêsus bèn phán rằng: Hãy truyền cho chúng ngồi xuống. Vả, trong nơi đó có nhiều cỏ. Vậy, chúng ngồi xuống, số người ước được <strong>năm ngàn</strong>.  <sup>11</sup> Ðức Chúa Jêsus lấy bánh, tạ ơn rồi, bèn phân phát cho những kẻ đã ngồi; Ngài cũng lấy cá phát cho chúng nữa, ai muốn bao nhiêu mặc ý.  <sup>12</sup> Khi chúng đã ăn được no nê, Ngài phán với môn đồ rằng: Hãy lượm những miếng còn thừa, hầu cho không mất chút nào.  <sup>13</sup> Vậy, môn đồ lượm những miếng thừa của năm cái bánh mạch nha, sau khi người ta đã ăn rồi, chứa đầy mười hai giỏ.</i></span> (John 6:1-13)</p>
+    <span style="color: rgb(159, 29, 33);"><i> <sup>1</sup> Rồi đó, Ðức Chúa Jêsus qua bờ bên kia biển Ga-li-lê, là biển Ti-bê-ri-át.  <sup>2</sup> Một đoàn dân đông theo Ngài, vì từng thấy các phép lạ Ngài làm cho những kẻ bịnh.  <sup>3</sup> Nhưng Ðức Chúa Jêsus lên trên núi, ngồi đó với môn đồ.  <sup>4</sup> Vả, lễ Vượt Qua, là lễ của đến Giu-đa gần tới.  <sup>5</sup> Ðức Chúa Jêsus ngước mắt lên, thấy một đoàn dân đông đến cùng mình, bèn phán với Phi-líp rằng: Chúng ta sẽ mua bánh ở đâu, để cho dân nầy có mà ăn?  <sup>6</sup> <strong>Ngài phán điều đó đặng thử Phi-líp, chớ Ngài đã biết điều Ngài sẽ làm rồi</strong>.  <sup>7</sup> Phi-líp thưa rằng: Hai trăm đơ-ni-ê bánh không đủ phát cho mỗi người một ít.  <sup>8</sup> Một môn đồ, là Anh-rê, em của Si-môn Phi -e-rơ, thưa rằng:  <sup>9</sup> Ðây có <strong>một đứa con trai, có năm cái bánh mạch nha và hai con cá</strong>; nhưng đông người dường nầy, thì ngằn ấy có thấm vào đâu?  <sup>10</sup> Ðức Chúa Jêsus bèn phán rằng: Hãy truyền cho chúng ngồi xuống. Vả, trong nơi đó có nhiều cỏ. Vậy, chúng ngồi xuống, số người ước được <strong>năm ngàn</strong>.  <sup>11</sup> Ðức Chúa Jêsus lấy bánh, tạ ơn rồi, bèn phân phát cho những kẻ đã ngồi; Ngài cũng lấy cá phát cho chúng nữa, ai muốn bao nhiêu mặc ý.  <sup>12</sup> Khi chúng đã ăn được no nê, Ngài phán với môn đồ rằng: Hãy lượm những miếng còn thừa, hầu cho không mất chút nào.  <sup>13</sup> Vậy, môn đồ lượm những miếng thừa của năm cái bánh mạch nha, sau khi người ta đã ăn rồi, chứa đầy mười hai giỏ.</i></span> (John 6:1-13)</p>
 </div>
 
 Đây là đoạn kinh thánh ghi lại phép lạ Chúa Giê-su đã làm để ban thực phẩm cho năm ngàn người nam (khoảng 10,000 đến 15,000 ngàn người gồm những gia đình có hai hoặc ba người) từ hai con cá và năm mẩu bánh.
+
+Khi đối diện với thử thách cung cấp thức ăn cho mười lăm ngàn người, phản ứng tự nhiên của chúng ta là tìm cách giải quyết vấn đề. Vì thế Chúa Giê-su dùng cơ hội này để dạy cho chúng ta một bài học rằng sự cứu rỗi của nhân loại thì cần sự tham dự của của Con Đức Chúa Trời, mọi nỗ lực xác thịt đều chẳng có ích gì. Câu hỏi của Chúa cho Phi-lip không phải là để thử xem ông có khả năng làm được điều Ngài hỏi ông không, nhưng để cho thấy sự giới hạn của loài người. Câu hỏi đó nhấn mạnh ý niệm rằng Chúa không cần bàn tay của loài người để đem lại vương quốc của ngày. Vì Ngài tự mình làm được điều đó mà không cần đến sự tham dự của loài người: ***"vì Ngài đã biết điều Ngài sẽ làm rồi".***
+
+Điểm nổi bật ở đây không phải là phép lạ hóa bánh cho hàng ngàn người ăn, nhưng ở phép lạ tha tội cho nhân loại và làm hòa họ lại với Đức Chúa Trời. Mọi hành động của Chúa Giê-su cũng như mọi phép lạ Ngài làm là đều có mục đích hướng chúng ta về  mục tiêu tối hậu trên hết mọi sự đó là sự Ngài lên cây thập tự để chịu chết cho nhân loại.
+
+Vì thế nếu bạn đọc câu chuyện Chúa Giê-su hóa bánh cho hơn hàng ngàn người ăn và kết luận rằng bài học chính là làm sao để có đức tin làm những công việc vĩ đại như Ngài đã làm, thì bạn đã đi sai đường rồi. Chúa Giê-su làm phép lạ này để chứng tỏ Ngài là Đức Chúa Trời và nhấn mạnh rằng chỉ minh Ngài có quyền năng để cứu rỗi nhân loại.
 
 ## ĐUỔI THEO THẾ GIAN
 
