--- a/_posts/bible-studies/John/2023-07-02-John-06-v01-71.md
+++ b/_posts/bible-studies/John/2023-07-02-John-06-v01-71.md
@@ -27,10 +27,18 @@ comments_locked: false
 <div>
 <p>
 <img alt src="http://vacsf.org/assets/images/John-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-    <span style="color: rgb(159, 29, 33);"><i> <sup>1</sup> After this Jesus went away to the other side of the Sea of Galilee (also called the Sea of Tiberias).  <sup>2</sup> A large crowd was following him because they were observing the miraculous signs he was performing on the sick.  <sup>3</sup> So Jesus went on up the mountainside and sat down there with his disciples.  <sup>4</sup> (Now the Jewish feast of the Passover was near.)  <sup>5</sup> Then Jesus, when he looked up and saw that a large crowd was coming to him, said to Philip, "Where can we buy bread so that these people may eat?"  <sup>6</sup> (Now Jesus said this to test him, for he knew what he was going to do.)  <sup>7</sup> Philip replied, "Two hundred silver coins worth of bread would not be enough for them, for each one to get a little."  <sup>8</sup> One of Jesus' disciples, Andrew, Simon Peter's brother, said to him,  <sup>9</sup> "<strong>Here is a boy who has five barley loaves and two fish</strong>, but what good are these for so many people?"  <sup>10</sup> Jesus said, "Have the people sit down." (Now there was a lot of grass in that place.) So the men sat down, about <strong>five thousand</strong> in number.  <sup>11</sup> Then Jesus took the loaves, and when he had given thanks, he distributed the bread to those who were seated. He then did the same with the fish, as much as they wanted.  <sup>12</sup> When they were all satisfied, Jesus said to his disciples, "Gather up the broken pieces that are left over, so that nothing is wasted."  <sup>13</sup> So they gathered them up and filled twelve baskets with broken pieces from the five barley loaves left over by the people who had eaten.</i></span> (John 6:1-13)</p>
+    <span style="color: rgb(159, 29, 33);"><i> <sup>1</sup> After this Jesus went away to the other side of the Sea of Galilee (also called the Sea of Tiberias).  <sup>2</sup> A large crowd was following him because they were observing the miraculous signs he was performing on the sick.  <sup>3</sup> So Jesus went on up the mountainside and sat down there with his disciples.  <sup>4</sup> (Now the Jewish feast of the Passover was near.)  <sup>5</sup> Then Jesus, when he looked up and saw that a large crowd was coming to him, said to Philip, "Where can we buy bread so that these people may eat?"  <sup>6</sup> (<strong>Now Jesus said this to test him, for he knew what he was going to do</strong>.)  <sup>7</sup> Philip replied, "Two hundred silver coins worth of bread would not be enough for them, for each one to get a little."  <sup>8</sup> One of Jesus' disciples, Andrew, Simon Peter's brother, said to him,  <sup>9</sup> "<strong>Here is a boy who has five barley loaves and two fish</strong>, but what good are these for so many people?"  <sup>10</sup> Jesus said, "Have the people sit down." (Now there was a lot of grass in that place.) So the men sat down, about <strong>five thousand</strong> in number.  <sup>11</sup> Then Jesus took the loaves, and when he had given thanks, he distributed the bread to those who were seated. He then did the same with the fish, as much as they wanted.  <sup>12</sup> When they were all satisfied, Jesus said to his disciples, "Gather up the broken pieces that are left over, so that nothing is wasted."  <sup>13</sup> So they gathered them up and filled twelve baskets with broken pieces from the five barley loaves left over by the people who had eaten.</i></span> (John 6:1-13)</p>
 </div>
 
 This is the part of the bible where the account of Jesus performing the miracle of feeding approximately 5,000 men (which could amount to 10,000 to 15,000 people when considering families of two or three) with just 2 fish and 5 loaves of bread is documented.
+
+This is the part of the bible where the account of Jesus performing the miracle of feeding approximately 5,000 men (which could amount to 10,000 to 15,000 people when considering families of two or three) with just 2 fish and 5 loaves of bread is documented.
+
+Facing with the challenge of feeding approximately 15 thousand people, a person's natural instinct is to try to come up with a solution. Hence, Jesus seizes this moment to impart the lesson that the salvation of humanity necessitates the unique intervention of the Son of God, rendering human efforts ineffective. His interaction with Philip is not a test of Philip's ability to fulfill the request but rather a demonstration of human limitations. It underscores the idea that God does not rely on humans to bring about His kingdom; He acts independently and does not depend on human endeavors.
+
+The significance lies not in the miracle of feeding the multitude, but in the miracle of absolving human sins and reuniting them with God. All of Jesus' actions and every miracle He performed served as a means to direct attention toward the ultimate objective of accomplishing the greatest miracle of all—His crucifixion to atone for humanity's sins.
+
+Therefore, if you read the story of Jesus feeding thousands and conclude that the primary lesson is about strengthening your faith to perform miracles like His, you've missed the essence of it. Jesus performed this miracle to demonstrate His divinity and emphasize that He alone has the power to save humanity, because ***"he knew what he was going to do."***
 
 ## WORLDLY PURSUIT
 
