--- a/_posts/bible-studies/John/2023-07-02-John-06-v01-71.md
+++ b/_posts/bible-studies/John/2023-07-02-John-06-v01-71.md
@@ -34,7 +34,7 @@ This is the part of the bible where the account of Jesus performing the miracle 
 
 This is the part of the bible where the account of Jesus performing the miracle of feeding approximately 5,000 men (which could amount to 10,000 to 15,000 people when considering families of two or three) with just 2 fish and 5 loaves of bread is documented.
 
-Facing with the challenge of feeding approximately 15 thousand people, a person's natural instinct is to try to come up with a solution. Hence, Jesus seizes this moment to impart the lesson that the salvation of humanity necessitates the unique intervention of the Son of God, rendering human efforts ineffective. His interaction with Philip is not a test of Philip's ability to fulfill the request but rather a demonstration of human limitations. It underscores the idea that God does not rely on humans to bring about His kingdom; He acts independently and does not depend on human endeavors.
+Facing with the challenge of feeding approximately 15 thousand people, a person's natural instinct is to try to come up with a solution. Hence, Jesus seizes this moment to impart the lesson that the salvation of humanity necessitates the unique intervention of the Son of God, rendering human efforts ineffective. His interaction with Philip is not a test of Philip's ability to fulfill the request but rather a demonstration of human limitations. It underscores the idea that God does not rely on humans to bring about His kingdom; He acts independently and does not depend on human endeavors, because ***"he knew what he was going to do."***.
 
 The significance lies not in the miracle of feeding the multitude, but in the miracle of absolving human sins and reuniting them with God. All of Jesus' actions and every miracle He performed served as a means to direct attention toward the ultimate objective of accomplishing the greatest miracle of all—His crucifixion to atone for humanity's sins.
 
