--- a/_posts/bible-studies/John/2023-07-02-John-06-v01-71.md
+++ b/_posts/bible-studies/John/2023-07-02-John-06-v01-71.md
@@ -38,7 +38,7 @@ Facing with the challenge of feeding approximately 15 thousand people, a person'
 
 The significance lies not in the miracle of feeding the multitude, but in the miracle of absolving human sins and reuniting them with God. All of Jesus' actions and every miracle He performed served as a means to direct attention toward the ultimate objective of accomplishing the greatest miracle of all—His crucifixion to atone for humanity's sins.
 
-Therefore, if you read the story of Jesus feeding thousands and conclude that the primary lesson is about strengthening your faith to perform miracles like His, you've missed the essence of it. Jesus performed this miracle to demonstrate His divinity and emphasize that He alone has the power to save humanity, because ***"he knew what he was going to do."***
+Therefore, if you read the story of Jesus feeding thousands and conclude that the primary lesson is about strengthening your faith to perform miracles like His, you've missed the essence of it. Jesus performed this miracle to demonstrate His divinity and emphasize that He alone has the power to save humanity.
 
 ## WORLDLY PURSUIT
 
