--- a/_posts/bible-studies/John/2023-07-02-John-06-v01-71.md
+++ b/_posts/bible-studies/John/2023-07-02-John-06-v01-71.md
@@ -81,5 +81,7 @@ If Jesus is your ultimate source of nourishment, you require no additional suppl
 
 Advocates of the theology that combines faith with works should thoroughly scrutinize this passage.
 
+[(<em>Next study: John 7:1-53</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-07-v01-53 %})
+
 {% include bible-study/bible-study-footer %}
 
