--- a/_posts/bible-studies/John/2023-07-02-John-07-v01-53.md
+++ b/_posts/bible-studies/John/2023-07-02-John-07-v01-53.md
@@ -79,5 +79,7 @@ They frequently discuss the Holy Spirit, but to them, He often serves as a means
 
 However, the undeniable truth is that the Holy Spirit is bestowed freely as a gift to those who place their faith in the One whom God has sent. He is a person, not a quantity to be dispensed based on the strength of your faith. You either possess Him or you do not; there are no degrees of His presence.
 
+[(<em>Next study: John 8:1-59</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-08-v01-59 %})
+
 {% include bible-study/bible-study-footer %}
 
