--- a/_posts/bible-studies/John/2023-07-02-John-08-v01-59.md
+++ b/_posts/bible-studies/John/2023-07-02-John-08-v01-59.md
@@ -114,5 +114,7 @@ The law cannot take care of the sin problems, but the cross can. The letter of t
 
 Jesus confirms His divine nature.
 
+[(<em>Next study: John 9:1-41</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-09-v01-41 %})
+
 {% include bible-study/bible-study-footer %}
 
