--- a/_posts/bible-studies/John/2023-07-02-John-09-v01-41.md
+++ b/_posts/bible-studies/John/2023-07-02-John-09-v01-41.md
@@ -90,5 +90,7 @@ Jesus makes this remark regarding the Pharisees: ***"you claim that you can see.
 
 In the Garden of Eden, when the concept represented by the knowledge of good and evil entered the consciousness of Adam and Eve, their eyes were opened, and they started to see, to their own detriment. So if they ***"were blind, they would not be guilty of sin."***
 
+[(<em>Next study: John 10:1-42</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-10-v01-42 %})
+
 {% include bible-study/bible-study-footer %}
 
