--- a/_posts/bible-studies-Viet/John/2023-07-02-John-11-v01-57-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-11-v01-57-Viet.md
@@ -55,5 +55,7 @@ Vậy, chúng ta cần ý thức rằng dù đoạn kinh thánh này xoay vần 
 
 Tóm lại, Chúa Giê-su không hỏi Ma-thê có tin Ngài có thế chữa lành La-xa-rơ hay không, nhưng Ngài hỏi cô có tin rằng hễ ai tin Ngài sẽ có sự sống đời đời.
 
+[(<em>Bài kế: John 12:1-50</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-12-v01-50-Viet %})
+
 {% include bible-study/bible-study-footer %}
 
