--- a/_posts/bible-studies-Viet/John/2023-07-02-John-12-v01-50-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-12-v01-50-Viet.md
@@ -134,5 +134,7 @@ Vậy, nếu bạn ao ước muốn vâng mệnh lệnh Chúa và hầu việc N
 
 > <sup>28</sup> Chúng thưa rằng: Chúng tôi <strong>phải làm chi</strong> cho được làm công việc Ðức Chúa Trời?  <sup>29</sup> Ðức Chúa Jêsus đáp rằng: "<strong>Các ngươi tin</strong> Ðấng mà Ðức Chúa Trời đã sai đến, <strong>ấy đó là công việc Ngài</strong>." (John 6:28-29)
 
+[(<em>Bài kế: John 13:1-38</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-13-v01-38-Viet %})
+
 {% include bible-study/bible-study-footer %}
 
