--- a/_posts/bible-studies-Viet/John/2023-07-02-John-15-v01-27-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-15-v01-27-Viet.md
@@ -56,5 +56,7 @@ Nhưng điều đáng buồn là nhiều tín hữu không thấy sự chuyển 
 
 Vậy, chúng ta phải làm gì để cứ ở trong Đấng Christ hầu kết quả cho Ngài? Chúng ta chỉ có thể làm được điều đó bằng cách đến với Chúa bởi đức tin thay vì cứ khăng khăng nắm chặt tay của người chủ cũ của mình là luật pháp.
 
+[(<em>Bài kế: John 16:1-33</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-16-v01-33-Viet %})
+
 {% include bible-study/bible-study-footer %}
 
