--- a/_posts/bible-studies-Viet/John/2023-07-02-John-16-v01-33-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-16-v01-33-Viet.md
@@ -87,5 +87,7 @@ Nói về ***"bất cứ điều chi các ngươi cầu xin,"*** thì đề tài
 
 Câu này nhấn mạnh tình yêu của Cha cho chúng ta sâu đậm đến nỗi chúng ta không cần Chúa Giê-su cầu thay cho mình nữa. Nói nói lên sự loại bỏ bất cứ trung gian nào giữa chúng ta và Chúa. Ý niệm này trùng hợp với điều viết trong (Hê-bơ-rơ) Hebrews 4:16: *"Vậy, chúng ta hãy vững lòng đến gần ngôi ơn phước, hầu cho được thương xót và tìm được ơn để giúp chúng ta trong thì giờ có cần dùng."* Ngai ân phước, mà khi xưa chỉ cho Thầy Tế Lễ Cả được vào một năm một lần mà bây giờ chúng ta được dạn dĩ vào vì bức màn ngăn cách đã bị xé từ trên xuống dưới khi Chúa Giê-su phán: *"Mọi sự đã được trọn."*
 
+[(<em>Bài kế: John 17:1-26</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-17-v01-26-Viet %})
+
 {% include bible-study/bible-study-footer %}
 
