--- a/_posts/bible-studies/John/2023-07-02-John-11-v01-57.md
+++ b/_posts/bible-studies/John/2023-07-02-John-11-v01-57.md
@@ -58,5 +58,7 @@ Hence, it is crucial to recognize that while the context revolves around the res
 
 In essence, Jesus is not inquiring of Martha whether she believes He can heal her brother; rather, He is asking if she believes that anyone who places their faith in Him will attain an everlasting life.
 
+[(<em>Next study: John 12:1-50</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-12-v01-50 %})
+
 {% include bible-study/bible-study-footer %}
 
