--- a/_posts/bible-studies/John/2023-07-02-John-12-v01-50.md
+++ b/_posts/bible-studies/John/2023-07-02-John-12-v01-50.md
@@ -136,5 +136,7 @@ So, if you desire to obey God's commandment and carry out His work, here is what
 
 > <sup>28</sup>So then they said to him, "<strong>What must we do</strong> to accomplish the deeds God requires?"  <sup>29</sup>Jesus replied, "This is the deed God requires - to <strong>believe</strong> in the one whom he sent." (John 6:28-29)
 
+[(<em>Next study: John 13:1-38</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-13-v01-38 %})
+
 {% include bible-study/bible-study-footer %}
 
