--- a/_posts/bible-studies/John/2023-07-02-John-13-v01-38.md
+++ b/_posts/bible-studies/John/2023-07-02-John-13-v01-38.md
@@ -96,5 +96,7 @@ I'm sure Peter will later understand this about loving God:
 
 > In this is love: not that we have loved God, but that he loved us and sent his Son to be the atoning sacrifice for our sins. (I John 4:10)
 
+[(<em>Next study: John 14:1-31</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-14-v01-31 %})
+
 {% include bible-study/bible-study-footer %}
 
