--- a/_posts/bible-studies/John/2023-07-02-John-14-v01-31.md
+++ b/_posts/bible-studies/John/2023-07-02-John-14-v01-31.md
@@ -103,5 +103,7 @@ If you have moved into the New Covenant, you are set free from the constraints o
 
 > But now we have been released from the law, because we have died to what controlled us, so that we may serve in the new life of the Spirit and not under the old written code. (Romans 7:6)
 
+[(<em>Next study: John 15:1-27</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-15-v01-27 %})
+
 {% include bible-study/bible-study-footer %}
 
