--- a/_posts/bible-studies/John/2023-07-02-John-15-v01-27.md
+++ b/_posts/bible-studies/John/2023-07-02-John-15-v01-27.md
@@ -59,5 +59,7 @@ Unfortunately, many Christians don't see this transition between the covenants, 
 
 So, how can you continue to abide in Christ in order to bear fruit? You achieve this by approaching Christ in faith instead of clinging to the guidance of your former guardian, the law.
 
+[(<em>Next study: John 16:1-33</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-16-v01-33 %})
+
 {% include bible-study/bible-study-footer %}
 
