--- a/_posts/bible-studies/John/2023-07-02-John-16-v01-33.md
+++ b/_posts/bible-studies/John/2023-07-02-John-16-v01-33.md
@@ -90,5 +90,7 @@ Regarding "whatever you ask," this topic has already been discussed in the study
 
 This statement emphasizes that the Father's love for you is so profound that Jesus doesn't need to intercede on your behalf when you ask in his name. It signifies the removal of any mediator between you and God. This concept aligns with Hebrews 4:16: *"Therefore let us confidently approach the throne of grace to receive mercy and find grace whenever we need help."* The throne of grace, once restricted to the Holy of Holies and accessible only to the High Priest once a year under the Old Covenant, is now fully available to all of us since the curtain separating us from the Most Holy Place was torn from the top when Jesus declared, *"It is finished."*
 
+[(<em>Next study: John 17:1-26</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-17-v01-26 %})
+
 {% include bible-study/bible-study-footer %}
 
