--- a/_posts/bible-studies/John/2023-07-02-John-17-v01-26.md
+++ b/_posts/bible-studies/John/2023-07-02-John-17-v01-26.md
@@ -111,5 +111,7 @@ You are set apart because you ***"believe in him."***
 
 > This is the deed God requires - to believe in the one whom he sent. (John 6:29)
 
+[(<em>Next study: John 18:1-40</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-18-v01-40 %})
+
 {% include bible-study/bible-study-footer %}
 
