more links to next

--- a/_posts/bible-studies-Viet/John/2023-07-02-John-01-v01-32-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-01-v01-32-Viet.md
@@ -83,5 +83,7 @@ Như đã được viết trong sách Hê-bơ-rơ, nhất là trong các chươn
 
 Câu 30 cho chúng ta thấy lý do Chúa Giê-su chịu báp têm: ***"để Ngài được tỏ ra cho dân Y-sơ-ra-ên."*** Hơn nữa, tôi tin rằng phép báp-têm bằng nước mà Giăng làm cho người Do-thái mang ý nghĩa hoàn toàn khác với điều các hội thánh làm thời nay.
 
+[(<em>Bài kế: John 1:33</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-01-v33-Viet %})
+
 {% include bible-study/bible-study-footer %}
 
