--- a/_posts/bible-studies-Viet/John/2023-07-02-John-01-v34-51-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-01-v34-51-Viet.md
@@ -38,5 +38,7 @@ Giống những người đồng thời với ông, Na-tha-niên chắc cũng đ
 
 Không có một gặp gỡ nào với Chúa Giê-su mà chỉ là tình cờ may rủi. Ngài biết rõ Na-thi-niên từ trước muôn đời, kể cả từ khi ông hãy còn trong lòng mẹ. Chúa lại còn có chương trình bày tỏ cho Na-tha-niên những ***"việc lớn hơn"*** những phép lạ mà ông đã chứng kiến nữa. Chúng ta có dám suy tưởng mình ở vào địa vị của Na-tha-niên không? Chắc chắn là có. Vì Đấng đó cũng là Chúa Giê-su lo tưởng đến từng sợi tóc trên đầu chúng ta và từng con chim sẻ hiện hữu khắp nơi. Thật là một điều mang lại xúc cảm lớn rằng Đấng tạo nên trời đất muôn vật lại có sự quan tâm cá nhân với mỗi người trong chúng ta. Cũng như Chúa đã biết rõ về Na-tha-niên, Ngài cũng biết rõ bạn và tôi.
 
+[(<em>Bài kế: John 2:1-25</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-02-v01-25-Viet %})
+
 {% include bible-study/bible-study-footer %}
 
