--- a/_posts/bible-studies-Viet/John/2023-07-02-John-02-v01-25-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-02-v01-25-Viet.md
@@ -75,5 +75,7 @@ Chúng ta thường xem trọng những lời làm chứng, và trong bối cả
 
 Lời chứng đáng tin cậy nhất chính là lời Chúa trong kinh thánh.
 
+[(<em>Bài kế: John 3:1-8</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-03-v01-08-Viet %})
+
 {% include bible-study/bible-study-footer %}
 
