--- a/_posts/bible-studies-Viet/John/2023-07-02-John-03-v01-08-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-03-v01-08-Viet.md
@@ -47,5 +47,7 @@ Nhưng lá cây vả, hay chính Y-sác, cũng chỉ là những sự sanh bởi
 
 Dầu vậy, nhiều tín hữu vẫn cố tìm cách sản xuất công việc của Thánh Linh. Điều quan trọng cần chú ý là dù sách Công Vụ có ghi lại những dấu kỳ phép lạ, chúng đã xảy ra như việc làm của gió—chẳng đến từ sự xen vào hoặc khát vọng của xác thịt, nhưng hoàn toàn từ ý muốn của Đức Chúa Trời.
 
+[(<em>Bài kế: John 3:9-21</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-03-v09-21-Viet %})
+
 {% include bible-study/bible-study-footer %}
 
