--- a/_posts/bible-studies-Viet/John/2023-07-02-John-03-v22-36-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-03-v22-36-Viet.md
@@ -60,5 +60,7 @@ Vì thế, duyên cớ trở nên rõ ràng về lý do Giăng tuyên bố trong
 
 Thực trạng được trình bày trong hai câu kinh thánh trên đã được truyền đạt rồi trong các câu 19 đến 21 trong bài học tuần trước. Đoạn kinh thánh đó nhấn mạnh rằng yếu tố căn bản của sự đoán xét không phải là sự phạm tội, hay không phạm, nhưng bởi quyết định ***"tin Con"*** hay ***"không chịu tin Con."*** Sự nhận biết này phải ảnh hưởng mối liên hệ giữa chúng ta và thế giới bên ngoài. Thông thường, người tín hữu thường cảm thấy mình thiêng liêng hơn những người ngoài đức tin, nhưng đoạn kinh thánh này khéo léo nhắc nhở rằng chúng ta chẳng hơn gì những kẻ nhiều tội nhất. Sự cứu rỗi mà chúng ta nhận được đến từ sự ban cho vô điều kiện và lòng thương xót của Đức Chúa Trời, là Đấng đã mở cho chúng ta đường đến với Ngài qua đức tin.
 
+[(<em>Bài kế: John 4:1-22</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-04-v01-22-Viet %})
+
 {% include bible-study/bible-study-footer %}
 
