--- a/_posts/bible-studies-Viet/John/2023-07-02-John-04-v01-22-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-04-v01-22-Viet.md
@@ -55,5 +55,7 @@ Bất kể bạn xem mình là người Do-thái hay người Sa-ma-ri, Chúa Gi
 
 Mỗi tôn giáo đều có những cung cách thờ phuợng. Vì thế, vấn đề không phải là người ta không thờ phượng, nhưng là họ thờ phuợng mà không biết rõ đối tượng sự tôn thờ của họ. Trong Romans 10:2, Phao-lô cho thấy có người có thể *“có lòng sốt sắng về Ðức Chúa Trời, nhưng lòng sốt sắng đó là không phải theo trí khôn.”* Vây, lòng sốt sắng có ích gì nếu không đặt nền tảng trên lẽ thật? Nhiều người dùng sự hăng say của họ để theo những điều sai trái dẫn họ đến chỗ hư mất. Lý do chính họ trở nên nạn nhân của những giáo sư và tiên tri giả là sự thiếu hiểu biết những chân lý nền tảng. Vì thế lòng hăng say của một người không đủ để mang đến cho họ sự cứu rỗi.
 
+[(<em>Bài kế: John 4:23-34</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-04-v23-34-Viet %})
+
 {% include bible-study/bible-study-footer %}
 
