--- a/_posts/bible-studies-Viet/John/2023-07-02-John-04-v23-34-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-04-v23-34-Viet.md
@@ -70,5 +70,7 @@ Chúng ta thấy rõ ràng, nhất là trong John 6:35, là Chúa Giê-su nhấn
 
 Nếu Chúa Giê-su xem thức ăn của Ngài là sự làm trọn sứ mạng của mình bằng cách hi sinh trên thập giá vì tội lỗi chúng ta hầu mang đến cho chúng ta sự công bình của Đức Chúa Trời, thì thức ăn của chúng ta còn gì khác ngoài việc đặt niềm tin nơi điều Ngài đã làm cho chúng ta?
 
+[(<em>Bài kế: John 4:35-54</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-04-v35-54-Viet %})
+
 {% include bible-study/bible-study-footer %}
 
