--- a/_posts/bible-studies-Viet/John/2023-07-02-John-04-v35-54-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-04-v35-54-Viet.md
@@ -70,5 +70,7 @@ Khi Chúa Giê-su phán, ***"Nếu các ngươi không thấy phép lạ và đi
 
 Là người tin Chúa, chúng ta tin và vững lòng nắm chặt lời Chúa đã hứa là Chúa Giê-su chết vì tội lỗi chúng ta. Thế nhưng, điều chúng ta không biết chắc là chương trình của Chúa cho mình trong cuộc sống này, nhất là về sức khỏe và tài chánh.
 
+[(<em>Bài kế: John 5:1-47</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-05-v01-47-Viet %})
+
 {% include bible-study/bible-study-footer %}
 
