--- a/_posts/bible-studies-Viet/John/2023-07-02-John-10-v01-42-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-10-v01-42-Viet.md
@@ -78,5 +78,7 @@ Chúng ta thường hay liên hệ từ lộng ngôn, hay phạm thượng, vớ
 
 Trong con mắt của người Do-thái đang sửa soạn ném đá Chúa Giê-su, tội lộng ngôn của Ngài là ***"người mà dám tự xưng là Đức Chúa Trời."*** Có một điểm liên hệ cũng khá quan trọng, là tội phạm thượng với Đức Thánh Linh cũng có thể được diễn tả là *"người mà dám tự xưng là Đức Thánh Linh"* hoặc, nói cách khác, là một người đứng vào vai trò của Đức Thánh Linh trong đời sống người khác.
 
+[(<em>Bài kế: John 11:1-57</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-11-v01-57-Viet %})
+
 {% include bible-study/bible-study-footer %}
 
