--- a/_posts/bible-studies/John/2023-07-02-John-01-v01-32.md
+++ b/_posts/bible-studies/John/2023-07-02-John-01-v01-32.md
@@ -86,5 +86,7 @@ As indicated in Hebrews, specifically in chapters 9 and 10, the law serves as a 
 
 Jesus was baptized by John the Baptist so ***"he could be revealed to Israel."*** Other than this, I believe that the water baptism John the Baptist performed to other Israelites carried a different meaning than what we're doing in churches today.
 
+[(<em>Bài kế: John 1:33</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-01-v33 %})
+
 {% include bible-study/bible-study-footer %}
 
