--- a/_posts/bible-studies/John/2023-07-02-John-01-v33.md
+++ b/_posts/bible-studies/John/2023-07-02-John-01-v33.md
@@ -52,5 +52,7 @@ The question we should contemplate is whether we possess everything necessary at
 
 Is the term ***"all things"*** inclusive of the Holy Spirit? Absolutely, it is.
 
+[(<em>Next study: John 1:34-51</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-01-v34-51 %})
+
 {% include bible-study/bible-study-footer %}
 
