--- a/_posts/bible-studies/John/2023-07-02-John-01-v34-51.md
+++ b/_posts/bible-studies/John/2023-07-02-John-01-v34-51.md
@@ -40,5 +40,7 @@ Similar to his contemporaries, Nathanael likely spent time studying Scriptures b
 
 In the realm of encounters with Jesus, nothing is coincidental. Jesus possessed prior knowledge of Nathanael even before his birth, when he resided within his mother's womb. Moreover, Jesus had a purpose in mind, intending to reveal to Nathanael ***"greater things."*** Can we dare to imagine ourselves in Nathanael's position? Absolutely. It is the same Jesus who demonstrates concern for every strand of hair upon our heads and every sparrow in existence. How awe-inspiring it is to comprehend that the God of the entire universe takes a personal interest in each one of us. Just as Jesus knew Nathanael, he also knows me and you.
 
+[(<em>Next study: John 2:1-25</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-02-v01-25 %})
+
 {% include bible-study/bible-study-footer %}
 
