--- a/_posts/bible-studies/John/2023-07-02-John-02-v01-25.md
+++ b/_posts/bible-studies/John/2023-07-02-John-02-v01-25.md
@@ -75,5 +75,7 @@ Testimonies hold significant importance to us, and in this passage, it appears t
 
 The most reliable source of testimony is the Bible itself.
 
+[(<em>Next study: John 3:1-8</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-03-v01-08 %})
+
 {% include bible-study/bible-study-footer %}
 
