--- a/_posts/bible-studies/John/2023-07-02-John-03-v01-08.md
+++ b/_posts/bible-studies/John/2023-07-02-John-03-v01-08.md
@@ -49,5 +49,7 @@ This highlights the distinction between what comes from human endeavors (born of
 
 Nevertheless, many Christians strive to produce the work of the Spirit. It is important to note that while unusual manifestations occurred in the book of Acts, they occurred like the work of the wind—emerging not from human intervention or desires, but solely according to God's will.
 
+[(<em>Next study: John 3:9-21</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-03-v09-21 %})
+
 {% include bible-study/bible-study-footer %}
 
