--- a/_posts/bible-studies/John/2023-07-02-John-03-v09-21.md
+++ b/_posts/bible-studies/John/2023-07-02-John-03-v09-21.md
@@ -61,5 +61,7 @@ The foundation for someone's judgment is their reluctance to come into the light
 
 The basis for judgment does not hinge on one's ability to cease sinning, but rather on whether they approach Jesus' cross with faith and express belief in Him.
 
+[(<em>Next study: John 3:22-36</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-03-v22-36 %})
+
 {% include bible-study/bible-study-footer %}
 
