--- a/_posts/bible-studies/John/2023-07-02-John-03-v22-36.md
+++ b/_posts/bible-studies/John/2023-07-02-John-03-v22-36.md
@@ -61,5 +61,7 @@ Hence, the reason becomes evident as to why John proclaimed in verse 27: ***"A p
 
 The reality conveyed within these two verses has already been articulated in verses 19 to 21 of our previous study. It underscores that the criterion for humanity's judgment is not rooted in their propensity to commit sins, as everyone is prone to sin, but rather in their decision to ***"place their faith in the Son"*** or ***"reject the Son."*** This perspective ought to influence our interactions with the world of unbelievers. Often, Christians may tend to perceive themselves as morally superior to those who lack faith, yet this passage should serve as a poignant reminder that our status is no loftier than the most egregious transgressors. Our salvation stems from the unmerited favor and compassion of God, who paved a pathway to Himself through the avenue of faith.
 
+[(<em>Next study: John 4:1-22</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-04-v01-22 %})
+
 {% include bible-study/bible-study-footer %}
 
