--- a/_posts/bible-studies/John/2023-07-02-John-04-v01-22.md
+++ b/_posts/bible-studies/John/2023-07-02-John-04-v01-22.md
@@ -57,5 +57,7 @@ Regardless of whether you identify as a Jew or a Samaritan, Jesus has ensured th
 
 Every religion incorporates a mode of worship. Therefore, the challenge doesn't stem from people's lack of engagement in worship, but rather from their involvement in worship without a comprehensive grasp or awareness of their chosen focus of worship. In Romans 10:2, Paul highlights that individuals can be *"enthusiastic for God, yet their enthusiasm deviates from the truth."* Thus, what significance does zeal hold when divorced from truth? Numerous individuals, driven by profound fervor, align themselves with falsehoods that inevitably guide them towards a path of downfall. The primary rationale behind people falling prey to deceptive prophets or instructors is their deficiency in understanding the truth. In this context, their zeal remains inadequate for ensuring salvation.
 
+[(<em>Next study: John 4:23-34</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-04-v23-34 %})
+
 {% include bible-study/bible-study-footer %}
 
