--- a/_posts/bible-studies/John/2023-07-02-John-04-v23-34.md
+++ b/_posts/bible-studies/John/2023-07-02-John-04-v23-34.md
@@ -72,5 +72,7 @@ Clearly evident, particularly in John 6:35, is Jesus' emphasis on addressing spi
 
 If Jesus finds sustenance in fulfilling the divine mission of sacrificing himself on the cross for our sins, leading to our justification before God, then what else can be our nourishment except placing our faith in his redemptive work on our behalf?
 
+[(<em>Next study: John 4:35-54</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-04-v35-54 %})
+
 {% include bible-study/bible-study-footer %}
 
