--- a/_posts/bible-studies/John/2023-07-02-John-04-v35-54.md
+++ b/_posts/bible-studies/John/2023-07-02-John-04-v35-54.md
@@ -72,5 +72,7 @@ When Jesus stated, ***"Unless you people see signs and wonders, you will never b
 
 As Christians, we have faith and can confidently lay claim to God's promise that Jesus died for our sins. However, what remains uncertain is God's plan for our current lives, especially regarding matters of health and wealth.
 
+[(<em>Next study: John 5:1-47</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-05-v01-47 %})
+
 {% include bible-study/bible-study-footer %}
 
