--- a/_posts/bible-studies/John/2023-07-02-John-05-v01-47.md
+++ b/_posts/bible-studies/John/2023-07-02-John-05-v01-47.md
@@ -88,5 +88,7 @@ These individuals have invested their hope in Moses, the bestower of the law. Ne
 
 Now that Jesus has arrived, some continue to fixate their gaze on Moses. However, Moses, representing the law, will eventually stand as their accuser on the day of judgment.
 
+[(<em>Next study: John 6:1-71</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-06-v01-71 %})
+
 {% include bible-study/bible-study-footer %}
 
