--- a/_posts/bible-studies/John/2023-07-02-John-10-v01-42.md
+++ b/_posts/bible-studies/John/2023-07-02-John-10-v01-42.md
@@ -80,5 +80,7 @@ We commonly link the sin of blasphemy with using improper or disrespectful langu
 
 In the perspective of the Jews who were on the verge of stoning Jesus, He was viewed as ***"a man who claimed to be God."*** On a related but equally significant note, the sin of blasphemy against the Holy Spirit could be described as *"a man claiming to be the Holy Spirit"* or, to put it differently, someone attempting to assume the role of the Holy Spirit in another person's life.
 
+[(<em>Next study: John 11:1-57</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-11-v01-57 %})
+
 {% include bible-study/bible-study-footer %}
 
