--- a/_posts/bible-studies-Viet/John/2023-07-02-John-01-v33-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-01-v33-Viet.md
@@ -50,5 +50,7 @@ Khi chúng ta ***"tin vào Đấng Christ,"*** chúng ta được ***"ấn chứ
 
 Bạn nghĩ có Đức Thánh Linh trong ***"mọi sự"*** đó không? Chắc chắn là có.
 
+[(<em>Bài kế: John 1:34-51</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-01-v34-51-Viet %})
+
 {% include bible-study/bible-study-footer %}
 
