--- a/_posts/bible-studies-Viet/John/2023-07-02-John-03-v09-21-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-03-v09-21-Viet.md
@@ -59,5 +59,7 @@ Lý do cơ bản khiến một người bị đoán xét là sự họ từ khư
 
 Sự đoán xét này không tùy thuộc vào khả năng của một cá nhân tránh đừng phạm tội, nhưng tùy vào sự họ có bày tỏ niềm tin nơi thập giá của Đấng Christ.
 
+[(<em>Bài kế: John 3:22-36</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-03-v22-36-Viet %})
+
 {% include bible-study/bible-study-footer %}
 
