--- a/_posts/bible-studies-Viet/John/2023-07-02-John-06-v01-71-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-06-v01-71-Viet.md
@@ -77,5 +77,7 @@ Nếu Chúa Giê-su là nguồn dinh dưỡng tối hậu thì bạn không cầ
 
 Những người cổ động đức tin cộng việc làm hãy nên suy gẫm kỹ về đoạn kinh thánh này.
 
+[(<em>Bài kế: John 7:1-53</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-07-v01-53-Viet %})
+
 {% include bible-study/bible-study-footer %}
 
